--- a/package.json
+++ b/package.json
@@ -1,11 +1,26 @@
 {
   "name": "tp_integrador",
   "version": "1.0.0",
+  "type": "module",
   "description": "trabajo final de cursado, programacion web full stack",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bagneres Francisco, Santiago Casals",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FranBag/Backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/FranBag/Backend/issues"
+  },
+  "homepage": "https://github.com/FranBag/Backend#readme",
+  "dependencies": {
+    "express": "^4.21.1",
+    "express-validator": "^7.2.0",
+    "mysql2": "^3.11.4",
+    "nodemon": "^3.1.7"
+  }
 }
