--- a/src/config/config.json
+++ b/src/config/config.json
@@ -4,7 +4,7 @@
     },
     "database": {
         "host": "localhost",
-        "user": "admin",
+        "user": "root",
         "password": "admin",
         "database": "integrador"
     }
