--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "trabajo final de cursado, programacion web full stack",
   "main": "app.js",
   "scripts": {
+    "start": "app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Bagneres Francisco, Santiago Casals",
