Cambios en lógicas de controllers, añadido login

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -7,5 +7,6 @@
         "user": "root",
         "password": "admin",
         "database": "integrador"
-    }
+    },
+    "encrypt_key":"SuperImposibleDeHackear123"
 }
