--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "trabajo final de cursado, programacion web full stack",
   "main": "app.js",
   "scripts": {
-    "start": "app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "index.js",
+    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest --coverage"
   },
   "author": "Bagneres Francisco, Santiago Casals",
   "license": "ISC",
@@ -19,12 +19,16 @@
   },
   "homepage": "https://github.com/FranBag/Backend#readme",
   "dependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "supertest": "^7.0.0"
   }
 }
